{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 170,
  "lineage": "6cb18ff3-6631-dd5e-4d1c-37e2c530e0d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00da5c53bae670861",
            "associate_with_private_ip": "172.16.10.100",
            "association_id": "eipassoc-01030883b9c3f84a0",
            "domain": "vpc",
            "id": "eipalloc-00da5c53bae670861",
            "instance": "i-00a9893c301799640",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07fa0a064914adfd5",
            "private_dns": "ip-172-16-10-100.us-east-2.compute.internal",
            "private_ip": "172.16.10.100",
            "public_dns": "ec2-3-131-223-125.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.223.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instancia",
            "aws_internet_gateway.gateway",
            "aws_network_interface.vivian_net_interface",
            "aws_security_group.demo_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:235253643939:instance/i-00a9893c301799640",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a9893c301799640",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "minhas-chaves",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-07fa0a064914adfd5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07fa0a064914adfd5",
            "private_dns": "ip-172-16-10-100.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.100",
            "public_ip": "18.220.111.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07bb8d7dc10fdf52b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adfc04ae1710d421",
            "tags": {
              "Environment": "MyEnv",
              "Name": "instancia-vivi"
            },
            "tags_all": {
              "Environment": "MyEnv",
              "Name": "instancia-vivi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0609586659940bba5"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_network_interface.vivian_net_interface",
            "aws_security_group.demo_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235253643939:internet-gateway/igw-0bfd5245f22cc891c",
            "id": "igw-0bfd5245f22cc891c",
            "owner_id": "235253643939",
            "tags": {
              "Name": "gateway-vivi"
            },
            "tags_all": {
              "Name": "gateway-vivi"
            },
            "vpc_id": "vpc-031f287e05884a1dd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vivian_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235253643939:network-interface/eni-07fa0a064914adfd5",
            "id": "eni-07fa0a064914adfd5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:7b:9a:76:76:d5",
            "owner_id": "235253643939",
            "private_ip": "172.16.10.100",
            "private_ip_list": [
              "172.16.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0609586659940bba5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adfc04ae1710d421",
            "tags": {
              "Environment": "MyEnv",
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Environment": "MyEnv",
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_security_group.demo_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235253643939:route-table/rtb-0d06f3f23b557bdc0",
            "id": "rtb-0d06f3f23b557bdc0",
            "owner_id": "235253643939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfd5245f22cc891c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031f287e05884a1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029147f530e8020bb",
            "route_table_id": "rtb-0d06f3f23b557bdc0",
            "subnet_id": "subnet-0adfc04ae1710d421"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235253643939:security-group/sg-0609586659940bba5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0609586659940bba5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dynamic-sg",
            "name_prefix": "",
            "owner_id": "235253643939",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031f287e05884a1dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235253643939:subnet/subnet-0adfc04ae1710d421",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adfc04ae1710d421",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235253643939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "MyEnv",
              "Name": "subnet-vivi"
            },
            "tags_all": {
              "Environment": "MyEnv",
              "Name": "subnet-vivi"
            },
            "vpc_id": "vpc-031f287e05884a1dd"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235253643939:vpc/vpc-031f287e05884a1dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-078667514d9121ddc",
            "default_route_table_id": "rtb-06299eb50980e301c",
            "default_security_group_id": "sg-0cdcc8008d429159c",
            "dhcp_options_id": "dopt-04e969b5f62868cf0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031f287e05884a1dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06299eb50980e301c",
            "owner_id": "235253643939",
            "tags": {
              "Environment": "MyEnv",
              "Name": "vpc-vivi"
            },
            "tags_all": {
              "Environment": "MyEnv",
              "Name": "vpc-vivi"
            }
          }
        }
      ]
    }
  ]
}